# agent-causal-decision-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  schema.json
docs/: PHASE-IIA-early-stop-and-did.md
examples/: ab_sample.json
skills/agent-causal/: SKILL.md  _meta.json
src/: __init__.py  ab_test.py  actions.py  api.py  audit.py  bayes.py  cli.py  cohort.py  did.py  dispatcher.py  errors.py  generate_schema.py  notifications.py  planning.py  schema.py  store.py  unified.py
src/agent_causal_decision_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/connectors/: __init__.py  cli.py  posthog.py
src/utils/: stats.py
tests/: conftest.py  test_ab_test.py  test_api.py  test_audit.py  test_bayes.py  test_cli.py  test_cohort.py  test_did.py  test_dispatcher.py  test_integration.py  test_planning.py  test_posthog_connector.py  test_schema.py  test_store.py  test_unified.py  test_warning_codes.py  test_workflow.py
