[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-causal-decision-tool"
version = "0.5.0"
description = "Causal decision and audit tool for AI agents"
authors = [{name = "Morris"}]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
agent-causal = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]